# Rustacene

./: Cargo.toml  README.md
src/: action.rs  build.rs  cell.rs  components.rs  coord.rs  dir.rs  gene.rs  grid.rs  main.rs  models.rs  ns.rs  organism.rs  resources.rs  sim.rs  systems.rs
src/components/: action.rs  activation.rs  cell_type.rs  conn.rs  dir.rs  gene.rs  genome.rs  neural_system.rs  neuron.rs  ns.rs  ns_shape.rs  organism.rs  pellet.rs  sensory_system.rs  ui.rs
src/models/: action.rs  dir.rs  mod.rs  parameters.rs  pellet.rs
src/ns/: conn.rs  mod.rs  ns.rs  ns_shape.rs
src/resources/: epoch_time.rs  grid.rs  parameters.rs  sim_state.rs  sim_time.rs  species.rs
src/systems/: advance_epoch.rs  camera_system.rs  center_camera.rs  entities_spawn.rs  execute_actions.rs  init_world.rs  input_system.rs  mod.rs  process_sensors.rs  reset_sim.rs  setup_system.rs  simulation_system.rs  startup_system.rs  ui.rs  ui_system.rs  util.rs  world_system.rs
src/systems/simulation_system/: advance_epoch.rs  energy_system.rs  epoch_system.rs  execute_actions.rs  generate_pellets.rs  init_system.rs  process_sensors.rs  reset_system.rs  sensor_system.rs  sim_step.rs  sim_step_system.rs
src/systems/startup_system/: sim_startup_system.rs  ui_startup_system.rs
src/systems/ui_system/: energy_info_system.rs  energy_text_system.rs  epoch_info_system.rs  epoch_text_system.rs  game_menu.rs  population_info_system.rs  population_text_system.rs  species_info_system.rs
src/systems/world_system/: init_world.rs  reset_world.rs
